src/test/deca/context/invalid/homeMade/tests/test333_type_op_binaire/test333_type_op_binaire14.deca
// test invalide de la règle 3.33


{
    boolean a = 0.5 >= true;
}
